--- a/source/views/partials/main-header.hbs
+++ b/source/views/partials/main-header.hbs
@@ -22,6 +22,9 @@
           <li>
             <a href="/smart-home">Smart Home</a>
           </li>
+          <li>
+            <a href="/retail-robotics-medical#smart-office">Smart Office</a>
+          </li>
         </ul>
       </li>
       <li>
