--- a/source/views/pages/index.hbs
+++ b/source/views/pages/index.hbs
@@ -43,7 +43,7 @@ description: Vayyar develops safe, mobile, low cost 3D imaging sensors, enabling
 
 <div class="section section--top-padded feature-quadrant">
   <div class="row align-center">
-    <h2 class="open-sans-light">Vayyar Applications</h2>
+    <h2 class="open-sans-light">Vayyar Markets</h2>
   </div>
   <div class="row">
     <div class="columns small-12 medium-6">
