--- a/source/views/pages/retail-robotics-medical/index.hbs
+++ b/source/views/pages/retail-robotics-medical/index.hbs
@@ -52,10 +52,10 @@ canon: '/retail-robotics-medical/'
         <li>Measure consumer intent – monitor gestures, movements and interest level for products</li>
         <li>Monitor shelf inventory</li>
       </ul>
-    </div>
+    </div> 
   </div>
 
-  <div class="row push--60 push--medium-200" id="retail">
+  <div class="row push--60 push--medium-200" id="smart-office">
     <div class="columns text-center medium-text-left">
       <h1 class="open-sans-bold">Smart Office</h1>
     </div>
