--- a/source/views/partials/contact-form.hbs
+++ b/source/views/partials/contact-form.hbs
@@ -17,18 +17,38 @@
       <div class="columns small-12 large-5">
         <label>Reason for Contact</label>
         <label class="select-mask">
-          <select id="changeWufooForm">
-              <option value="General Inquiries"> General Inquiries</option>
-              <option value="Business Partnerships"> Business Partnerships</option>
-    				  <option value="Request for Quote">Request for Quote</option>
-    				  <option value="Career Opportunities">Career Opportunities</option>
-    				  <option value="Walabot">Walabot</option>
-    				  <option value="Technical Queries">Technical Queries</option>
-    				  <option value="Press">Press</option>
-    				  <option value="Suppliers">Suppliers</option>
-    				  <option value="Investment">Investment</option>
-    				  <option value="Other">Other</option>
-    			</select>
+          <select id="Field8" name="Field8" class="field select medium"       tabindex="5" >
+             <option value="General Inquiries" selected="selected">
+                <span class="notranslate">General Inquiries</span>
+             </option>
+             <option value="Business Partnerships" >
+                <span class="notranslate">Business Partnerships</span>
+             </option>
+             <option value="Request for Quote" >
+                <span class="notranslate">Request for Quote</span>
+             </option>
+             <option value="Career Opportunities" >
+                <span class="notranslate">Career Opportunities</span>
+             </option>
+             <option value="Walabot" >
+                <span class="notranslate">Walabot</span>
+             </option>
+             <option value="Technical Queries" >
+                <span class="notranslate">Technical Queries</span>
+             </option>
+             <option value="Press" >
+                <span class="notranslate">Press</span>
+             </option>
+             <option value="Suppliers" >
+                <span class="notranslate">Suppliers</span>
+             </option>
+             <option value="Investment" >
+                <span class="notranslate">Investment</span>
+             </option>
+             <option value="Other" >
+                <span class="notranslate">Other</span>
+             </option>
+          </select>
         </label>
 
         <label>Your Name</label>
