--- a/source/views/partials/main-header.hbs
+++ b/source/views/partials/main-header.hbs
@@ -8,7 +8,7 @@
     <button class="mobile-nav-toggle hide-for-large js-mobile-toggle"><i class="fa fa-bars"></i></button>
     <ul class="main-nav">
       <li>
-        <a href="#" class="show-for-large">Divisions <i class="fa fa-caret-down"></i></a>
+        <a href="#" class="show-for-large">Markets <i class="fa fa-caret-down"></i></a>
         <ul>
           <li>
             <a href="/automotive">Automotive</a>
@@ -17,13 +17,16 @@
             <a href="/smart-home">Smart Home</a>
           </li>
           <li>
-            <a href="/retail-robotics-medical#robotics">Robotics</a>
+            <a href="/retail-robotics-medical/#office">Smart Office</a>
           </li>
           <li>
-            <a href="/retail-robotics-medical#retail">Retail</a>
+            <a href="/retail-robotics-medical/#robotics">Robotics</a>
           </li>
           <li>
-            <a href="/retail-robotics-medical#medical">Medical</a>
+            <a href="/retail-robotics-medical/#retail">Retail</a>
+          </li>
+          <li>
+            <a href="/retail-robotics-medical/#medical">Medical</a>
           </li>
         </ul>
       </li>
