--- a/source/views/partials/site-footer.hbs
+++ b/source/views/partials/site-footer.hbs
@@ -31,6 +31,7 @@
         </li>
         <li><a href="/automotive">Automotive</a></li>
         <li><a href="/smart-home">Smart Home</a></li>
+        <li><a href="/retail-robotics-medical">Smart Office</a></li>
         <li><a href="/retail-robotics-medical">Robotics</a></li>
         <li><a href="/retail-robotics-medical">Retail</a></li>
         <li><a href="/technology">Technology</a></li>
