--- a/source/views/partials/vayyar-xsell.hbs
+++ b/source/views/partials/vayyar-xsell.hbs
@@ -97,7 +97,7 @@
 <div class="row push--medium-100 show-for-large">
 {{/unless}}
   <div class="columns text-left">
-    <h2 class="open-sans-light">More Divisions</h2>
+    <h2 class="open-sans-light">More Markets</h2>
   </div>
 </div>
 
