--- a/source/views/pages/press/index.hbs
+++ b/source/views/pages/press/index.hbs
@@ -14,42 +14,53 @@ canon: '/press/'
 </div>
 
 <div class="section">
-
   <div class="row push--30 push--medium-70">
+    <div class="columns small-12 text-center">
+      <h3 class="open-sans-bold">CES 2018</h3>
+    </div>
+    <div class="columns text-center push--30 push--medium-30">
+      <h3 class="open-sans-bold fc--aqua">
+        <a href="/assets/media/PepcomMediaKit.zip" target="_blank">
+          Press Release &amp; Asset Package
+        </a>
+      </h3>
+    </div>
+  </div>
+  <div class="row push--30 push--medium-70">
+    <div class="columns text-center">
+      <h3 class="open-sans-bold">Series C</h3>
+    </div>
+  </div>
+  <div class="row push--30 push--medium-30">
     <div class="columns small-12 large-5 text-center">
       <h3 class="open-sans-bold fc--aqua">
 	       <a href="/assets/media/Vayyar-press-release-121417.pdf" target="_blank">
 		       Press Release and FAQ
 	       </a>
-	  </h3>
+	     </h3>
     </div>
     <div class="columns push--30 small-12 large-3 text-center">
       <h3 class="open-sans-bold fc--aqua">
-		<a href="/assets/media/Vayyar-images.zip">
-			Images
-		</a>
-	  </h3>
+        <a href="/assets/media/Vayyar-images.zip">
+          Images
+        </a>
+	     </h3>
     </div>
-	<div class="columns push--30 small-12 large-4 text-center">
+    <div class="columns push--30 small-12 large-4 text-center">
       <h3 class="open-sans-bold fc--aqua">
-		<a href=" https://www.youtube.com/channel/UC1-pUD8UkDWCjkgLD-WoheQ/videos" target="_blank">
-			Video Assets
-		</a>
-	  </h3>
+        <a href=" https://www.youtube.com/channel/UC1-pUD8UkDWCjkgLD-WoheQ/videos" target="_blank">
+          Video Assets
+        </a>
+      </h3>
     </div>
   </div>
-
   <div class="row push--60 push--medium-70">
     <div class="columns">
       <h4 class="open-sans-bold fc--mg text-center">Press Contact: <a href="mailto:vayyar@bigfishpr.com" target="_blank"> vayyar@bigfishpr</a></h4>
     </div>
   </div>
 
-
-
-<!-- /Serction -->
+  <!-- /Serction -->
 </div>
 
-{{>contact-form}}
-
-{{>site-footer}}
+{{>contact-form}} {{>site-footer}}
